
[package]
name = "deterministic_rust"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
# OK
#serde = { version = "1.0.203", default-features = false }
#colored = "2.2.0"
#holochain_util = "0.4.1"
#holochain_integrity_types = "0.4.1"

# UNKNOWN
#getrandom = { version = "0.2.7", default-features = false, features = ["custom"] }
#holochain_nonce = "0.4.1"
#holochain_zome_types = { version = "0.4.1", features = ["full"] }

#hdk_derive = "0.4.1"

# NOT OK
hdi = "=0.4.1"
#hdk = { version = "=0.4.1", features = ["encoding"] }
#hdk = { path = "../holochain/crates/hdk", package = "hdk", features = ["encoding"] }

[profile.release]
codegen-units = 1
debug = false
lto = true

#[patch.crates-io]
#getrandom = { git="https://github.com/rust-random/getrandom.git",  rev="cf65e83f9df8954df101320de86f80dccfc6b68a", features = ["js"] }